Maybe we don't need custom commands, they will be removed in the next commit

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -112,7 +112,7 @@ features {
     dummy-sections=[]
 
     # Reiterative sections remember the server the player connected to previously
-    # The plugin will keep connecting the player to that server until a change occurs
+    # The plugin will keep connecting the player to that server repeatedly
     reiterative-sections=[]
 
     # When true, section servers will show the sum of the players on all servers on that section
@@ -225,6 +225,7 @@ features {
   custom-find-command {
     enabled=false
 
+    # Leave permission empty for no permission
     command {
       name=find
       permission=""
@@ -232,14 +233,16 @@ features {
     }
 
     formats {
-      result=""
-      offline=""
+      result="&a{name} &cis online at &a{server}"
+      missing="&cThere is no such player named {name}"
+      usage="&cUsage: /find <user>"
     }
   }
 
   custom-list-command {
     enabled=false
 
+    # Leave permission empty for no permission
     command {
       name=glist
       permission=""
@@ -255,6 +258,7 @@ features {
   custom-server-command {
     enabled=false
 
+    # Leave permission empty for no permission
     command {
       name=server
       permission=""
