Removed the custom commands

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -222,54 +222,8 @@ features {
     interval=5000
   }
 
-  custom-find-command {
-    enabled=false
-
-    # Leave permission empty for no permission
-    command {
-      name=find
-      permission=""
-      aliases=[]
-    }
-
-    formats {
-      result="&a{name} &cis online at &a{server}"
-      missing="&cThere is no such player named {name}"
-      usage="&cUsage: /find <user>"
-    }
-  }
-
-  custom-list-command {
-    enabled=false
-
-    # Leave permission empty for no permission
-    command {
-      name=glist
-      permission=""
-      aliases=[]
-    }
-
-    formats {
-      server = ""
-      total = ""
-    }
-  }
-
-  custom-server-command {
-    enabled=false
-
-    # Leave permission empty for no permission
-    command {
-      name=server
-      permission=""
-      aliases=[]
-    }
-
-    formats {
-      # Nothing yet
-    }
-  }
-
+  # Redirect players when connecting to a section in case they have a permission, useful for special lobbies
+  # Players will not get redirected if they are connected to a server where they were previously redirected to
   permission-router {
     enabled=false
 
