Fixed mistake in the config

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -227,7 +227,7 @@ features {
   permission-router {
     enabled=false
 
-    routes {
+    rules {
       general-lobbies {
         special.permission=other-lobby-section,
       }
