--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -229,7 +229,7 @@ features {
 
     rules {
       general-lobbies {
-        special.permission=other-lobby-section,
+        special.permission=other-lobby-section
       }
     }
   }
