--- a/Main Plugin/pom.xml
+++ b/Main Plugin/pom.xml
@@ -11,7 +11,7 @@
 
     <name>PlayerBalancer Plugin</name>
     <artifactId>playerbalancer-plugin</artifactId>
-    <version>2.1.5.3</version>
+    <version>2.1.5.4</version>
 
     <build>
         <finalName>PlayerBalancer</finalName>
@@ -65,13 +65,17 @@
             <id>bstats-repo</id>
             <url>http://repo.bstats.org/content/repositories/releases/</url>
         </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
-            <version>local</version>
+            <version>LATEST</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
