--- a/balancer/pom.xml
+++ b/balancer/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.jaimemartz</groupId>
-        <version>2.1.6-SNAPSHOT</version>
+        <version>2.1.6.1-SNAPSHOT</version>
         <artifactId>playerbalancer-parent</artifactId>
     </parent>
 
@@ -49,12 +49,12 @@
 
     <repositories>
         <repository>
-            <id>md_5-snapshots</id>
-            <url>http://repo.md-5.net/content/repositories/snapshots/</url>
+            <id>bungeecord-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
         <repository>
-            <id>bstats-repo</id>
-            <url>http://repo.bstats.org/content/repositories/releases/</url>
+            <id>CodeMC</id>
+            <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
     </repositories>
 
@@ -62,7 +62,8 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
-            <version>1.13-SNAPSHOT</version>
+            <version>1.15-SNAPSHOT</version>
+            <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -87,7 +88,7 @@
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bungeecord</artifactId>
-            <version>1.4</version>
+            <version>1.7</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
