--- a/balancer/src/main/resources/default.conf
+++ b/balancer/src/main/resources/default.conf
@@ -11,6 +11,9 @@ general {
   # When true, the plugin will reload when you execute /greload
   auto-reload=true
 
+  # When true, the plugin will get player counts from RedisBungee (Limework Fork: https://www.spigotmc.org/resources/87700/)
+  redis-bungee=false
+
   # When true, this plugin will print less messages when loading
   silent=false
 
