--- a/balancer/src/main/resources/default.conf
+++ b/balancer/src/main/resources/default.conf
@@ -1,6 +1,7 @@
 # PlayerBalancer Configuration (https://www.spigotmc.org/resources/10788/)
 # Read the comments, they are a very important part of the configuration
-# To get support send me a private message with a description of the problem and the config file
+# To get support please message us on Discord (https://bghddevelopment.com/discord) or on the "Issues"
+# section of the GitHub repository.
 # To easily paste the config file (and other relevant files) use the command /balancer paste
 # If the plugin has issues loading the configuration, try putting quotes around text
 
