--- a/balancer/src/main/resources/plugin.yml
+++ b/balancer/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PlayerBalancer
 main: com.jaimemartz.playerbalancer.PlayerBalancer
 version: ${project.version}
-author: jaime29010
+authors: [jaime29010, BGHDDevelopment]
 softdepend: [RedisBungee]
