--- a/addon/src/main/resources/plugin.yml
+++ b/addon/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: PlayerBalancerAddon
 main: com.jaimemartz.playerbalanceraddon.PlayerBalancerAddon
 version: ${project.version}
-author: jaime29010
+authors: [jaime29010, BGHDDevelopment]
 softdepend: [PlaceholderAPI]
 
 commands:
