--- a/partyandfriendsaddon/pom.xml
+++ b/partyandfriendsaddon/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.bghddevelopment.partyandfriendsaddon</groupId>
     <artifactId>PBServerConnector</artifactId>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Addon</name>
+    <name>PartyAndFriendsAddon</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -61,17 +61,17 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
-            <repository>
-                <id>simonsators Repo</id>
-                <url>http://simonsator.de/repo</url>
-            </repository>
+        <repository>
+            <id>simonsators Repo</id>
+            <url>https://simonsator.de/repo</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>de.simonsator</groupId>
             <artifactId>BungeecordPartyAndFriends</artifactId>
-            <version>1.0.79</version>
+            <version>1.0.85</version>
         </dependency>
         <dependency>
             <groupId>net.md-5</groupId>
@@ -88,7 +88,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.spigotmc</groupId>
+            <groupId>com.jaimemartz.playerbalancer</groupId>
             <artifactId>PlayerBalancer</artifactId>
             <version>2.3.0-SNAPSHOT</version>
             <scope>system</scope>
