--- a/partyandfriendsaddon/pom.xml
+++ b/partyandfriendsaddon/pom.xml
@@ -71,7 +71,8 @@
         <dependency>
             <groupId>de.simonsator</groupId>
             <artifactId>BungeecordPartyAndFriends</artifactId>
-            <version>1.0.85</version>
+            <version>1.0.86</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.md-5</groupId>
@@ -88,11 +89,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.jaimemartz.playerbalancer</groupId>
-            <artifactId>PlayerBalancer</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/release/PlayerBalancer-2.3.0.jar</systemPath>
+            <groupId>com.jaimemartz</groupId>
+            <artifactId>playerbalancer</artifactId>
+            <version>2.3.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
