--- a/balancer/pom.xml
+++ b/balancer/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.jaimemartz</groupId>
-        <version>2.3.2-SNAPSHOT</version>
+        <version>2.3.3</version>
         <artifactId>playerbalancer-parent</artifactId>
     </parent>
 
