--- a/partyandfriendsaddon/pom.xml
+++ b/partyandfriendsaddon/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bghddevelopment.partyandfriendsaddon</groupId>
     <artifactId>PBServerConnector</artifactId>
-    <version>2.3.2-SNAPSHOT</version>
+    <version>2.3.3</version>
     <packaging>jar</packaging>
 
     <name>PartyAndFriendsAddon</name>
