--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.jaimemartz</groupId>
     <artifactId>playerbalancer-parent</artifactId>
-    <version>2.3.2-SNAPSHOT</version>
+    <version>2.3.3</version>
     <packaging>pom</packaging>
 
     <modules>
