feat: initial commit for velocity support

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>balancer</module>
+        <module>balancer-velocity</module>
         <module>addon</module>
         <module>partyandfriendsaddon</module>
     </modules>
