fix: missing color in connecting-server message

--- a/balancer-velocity/src/main/resources/velocity.conf
+++ b/balancer-velocity/src/main/resources/velocity.conf
@@ -29,7 +29,7 @@ general {
 # Effectively remove (i.e comment) a message to disable it
 # Supported variables are shown in the default messages
 messages {
-  # connecting-server="&aConnecting to an {section} ({alias}) server" # this message is disabled by default!
+  # connecting-server="<green>Connecting to an {section} ({alias}) server" # this message is disabled by default!
   connected-server="<green>Connected to {server} (an {alias} server)"
   invalid-input="<red>This is an invalid input type for this command"
   misc-failure="<red>Could not find a server to get connected to"
