--- a/partyandfriendsaddon/pom.xml
+++ b/partyandfriendsaddon/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>com.jaimemartz</groupId>
             <artifactId>playerbalancer</artifactId>
-            <version>2.3.2-SNAPSHOT</version>
+            <version>2.3.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
