--- a/balancer/pom.xml
+++ b/balancer/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.jaimemartz</groupId>
-        <version>2.3.4</version>
+        <version>2.3.5</version>
         <artifactId>playerbalancer-parent</artifactId>
     </parent>
 
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
-            <version>1.15-SNAPSHOT</version>
+            <version>1.20-R0.3-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
