feat: initial commit for PartyAndFriendsAddon Velocity support

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>balancer-velocity</module>
         <module>addon</module>
         <module>partyandfriendsaddon</module>
+        <module>partyandfriendsaddon-velocity</module>
     </modules>
 
     <name>PlayerBalancerParent</name>
