Fixed invalid color codes in addon Updated confusing naming for the partyandfriends jar during compiling

--- a/partyandfriendsaddon/pom.xml
+++ b/partyandfriendsaddon/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bghddevelopment.partyandfriendsaddon</groupId>
-    <artifactId>PBServerConnector</artifactId>
+    <artifactId>PartyAndFriendsAddon</artifactId>
     <version>2.3.6</version>
     <packaging>jar</packaging>
 
